--- a/pos_retail/static/description/index.html
+++ b/pos_retail/static/description/index.html
@@ -1,6 +1,6 @@
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced" style="padding:8px;font-weight: 200; font-size: 20px; color: black">
-        <h2 class="oe_slogan" style="color:#875A7B;">POS para Odoo 13 EE</h2>
+        <h2 class="oe_slogan" style="color:#875A7B;">Welcome to the BEST POS Solution Odoo</h2>
         <div class="oe_span12">
             <img class="oe_picture oe_screenshot" src="main_screen.png"
                  style="max-width: 100%; margin-bottom: 18px; border: 1px solid lightslategray; max-height: unset; margin: auto"/>
@@ -10,18 +10,18 @@
 
 <div class="panel-heading oe_dark">
     <div class="oe_row oe_spaced alert alert-info" style="padding:8px;font-weight: 200; font-size: 20px; color: black">
-        <h2 class="oe_slogan">UI / UX de aplicación de búsqueda rápida</h2>
+        <h2 class="oe_slogan">Quickly Looking UI/UX of App</h2>
         <div class="oe_span12">
             <ul>
-                <li>Compatible con tablets y móviles</li>
-                <li>Estilo de interfaz limpia 2020</li>
+                <li>Support Responsive Tablet, Mobile</li>
+                <li>Clean UI Style 2020</li>
             </ul>
         </div>
         <div class="oe_row oe_spaced text-center">
             <div class="oe_span12">
                 <div class="text-center">
                     <h1><a href="https://www.youtube.com/watch?v=_MUB86k6A58" target="_blank">
-                        <i class="fa fa-youtube-play"></i> Mirando ahora, por favor
+                        <i class="fa fa-youtube-play"></i> Watching Now, Please
                     </a></h1>
                 </div>
             </div>
@@ -31,10 +31,10 @@
 
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced" style="padding:8px;font-weight: 200; font-size: 20px; color: black">
-        <h2 class="oe_slogan" style="color:#875A7B;">Todas las pantallas de la aplicación</h2>
+        <h2 class="oe_slogan" style="color:#875A7B;">All Screens of App</h2>
         <div class="oe_span12">
             <ul>
-                <li>1. Productos Modo de luz de pantalla</li>
+                <li>1. Products Screen Light Mode</li>
             </ul>
         </div>
         <div class="oe_span12">
